<resources>
    <string name="app_name">ShiftTestTask</string>

    <string name="name">Name</string>
    <string name="nameHint">John</string>
    <string name="surname">Surname</string>
    <string name="surnameHint">Doe</string>
    <string name="birthday">Birthday</string>
    <string name="birthdayHint">dd-mm-yyyy</string>
    <string name="firstPassword">Password</string>
    <string name="passwordHint">********</string>
    <string name="secondPassword">Repeat\npassword</string>
    <string name="registrationButton">Registration</string>
    <string name="startLogoDescription">This is start logo</string>
    <string name="userLogoDescription">This is user logo</string>
    <string name="nameErrorMessage">The length of the name must be\n 2 or more characters\n and consist only of letters</string>
    <string name="birthdayErrorMessage">You must be at least 18 years old</string>
    <string name="firstPasswordErrorMessage">The password must be:\n Consist of at least 8 characters\n Contain at least one letter and number\n Contain at least one special character\n Not contain spaces </string>
    <string name="secondPasswordErrorMessage">Passwords don\'t match</string>
    <string name="applyButtonName">Apply</string>

    <string name="greetingButtonName">Greeting</string>
    <string name="greetingTitle">Welcome!</string>
    <string name="greetingBody">Welcome aboard</string>
    <string name="exitButtonName">Exit</string>

    <string name="nameDigits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>