<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RegistrationFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/registrationLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/register_svg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="@id/inputName"
            app:layout_constraintEnd_toStartOf="@+id/inputName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputName" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_message_margin"
            android:autofillHints="@string/name"
            android:background="@drawable/neutral_edit_text_theme"
            android:ems="7"
            android:hint="@string/nameHint"
            android:digits="@string/nameDigits"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="@dimen/edittext_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/registrationLogo"
            app:layout_constraintTop_toBottomOf="@+id/registrationLogo" />

        <TextView
            android:id="@+id/nameErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/inputName"
            app:layout_constraintStart_toStartOf="@+id/inputName"
            app:layout_constraintTop_toBottomOf="@+id/inputName" />

        <TextView
            android:id="@+id/textSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="@id/inputSurname"
            app:layout_constraintEnd_toStartOf="@+id/inputSurname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputSurname" />

        <EditText
            android:id="@+id/inputSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/surname"
            android:background="@drawable/neutral_edit_text_theme"
            android:ems="7"
            android:hint="@string/surnameHint"
            android:digits="@string/nameDigits"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="@dimen/edittext_font_size"
            app:layout_constraintBottom_toTopOf="@id/surnameErrorMessage"
            app:layout_constraintEnd_toEndOf="@+id/nameErrorMessage"
            app:layout_constraintStart_toStartOf="@+id/nameErrorMessage"
            app:layout_constraintTop_toBottomOf="@+id/nameErrorMessage" />

        <TextView
            android:id="@+id/surnameErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/inputSurname"
            app:layout_constraintStart_toStartOf="@+id/inputSurname"
            app:layout_constraintTop_toBottomOf="@+id/inputSurname" />

        <TextView
            android:id="@+id/textBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText"
            app:layout_constraintEnd_toStartOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameErrorMessage" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/neutral_edit_text_theme"
            android:ems="8"
            android:inputType="text"
            android:hint="@string/birthdayHint"
            app:layout_constraintEnd_toEndOf="@+id/surnameErrorMessage"
            app:layout_constraintStart_toStartOf="@+id/surnameErrorMessage"
            app:layout_constraintTop_toBottomOf="@id/surnameErrorMessage" />

        <TextView
            android:id="@+id/textFirstPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstPassword"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="@id/inputFirstPassword"
            app:layout_constraintEnd_toStartOf="@+id/inputFirstPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputFirstPassword" />

        <EditText
            android:id="@+id/inputFirstPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/firstPassword"
            android:background="@drawable/neutral_edit_text_theme"
            android:ems="7"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="@dimen/edittext_font_size"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="@+id/editTextText"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <TextView
            android:id="@+id/firstPasswordErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/inputFirstPassword"
            app:layout_constraintStart_toStartOf="@+id/inputFirstPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputFirstPassword" />

        <TextView
            android:id="@+id/textSecondPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/secondPassword"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="@id/inputSecondPassword"
            app:layout_constraintEnd_toStartOf="@+id/inputSecondPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputSecondPassword" />

        <EditText
            android:id="@+id/inputSecondPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/firstPassword"
            android:background="@drawable/neutral_edit_text_theme"
            android:ems="7"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textSize="@dimen/edittext_font_size"
            app:layout_constraintEnd_toEndOf="@+id/firstPasswordErrorMessage"
            app:layout_constraintStart_toStartOf="@+id/firstPasswordErrorMessage"
            app:layout_constraintTop_toBottomOf="@+id/firstPasswordErrorMessage" />

        <TextView
            android:id="@+id/secondPasswordErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/inputSecondPassword"
            app:layout_constraintStart_toStartOf="@+id/inputSecondPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputSecondPassword" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_message_margin"
            android:text="@string/applyButtonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondPasswordErrorMessage"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>